--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^1.16.5",
     "@react-navigation/native": "^5.x",
     "@react-navigation/stack": "^5.x",
     "react": "17.0.1",
