integration upload photo

--- a/ios/FoodMarket_RN/Info.plist
+++ b/ios/FoodMarket_RN/Info.plist
@@ -57,5 +57,10 @@
 		<string>Poppins-Medium.ttf</string>
 		<string>Poppins-Regular.ttf</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+    <key>NSAllowsArbitraryLoads</key>
+    <true/>
+	</dict>
 </dict>
 </plist>
