--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.8",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^1.16.5",
     "@react-navigation/bottom-tabs": "^5.x",
@@ -22,6 +23,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.0.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-localization": "^2.1.7",
     "react-native-pager-view": "^5.4.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
